<resources>
    <string name="app_name">JNews</string>
    <string name="title_activity_articles">글</string>
    <string name="title_activity_download">다운로드</string>

    <string name="cancel">취소</string>
    <string name="download">다운로드</string>
    <string name="download_failed">다운로드 실패함</string>
    <string name="japanese">日本語</string>
    <string name="no_directory">디렉토리 없음</string>
    <string name="no_internet_connection">인터넷 연결 없음</string>
    <string name="permission_denied">권한 거부됨</string>
    <string name="refresh">새로 고침</string>
    <string name="response_failed">응답 실패함</string>
    <string name="status">상태</string>
    <string name="title">제목</string>
    <string name="downloading">다운로드 중…</string>
    <string name="shuffle">Shuffle</string>
    <string name="counter">Counter</string>
    <string name="forward">Forward</string>
    <string name="play_or_pause">Play or Pause</string>
    <string name="rewind">Rewind</string>
    <string name="track">Track</string>
</resources>